--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,5 +13,5 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           script: |
-            whoami
-            ls
+            cd ${{ secrets.DIR }}
+            git pull origin master
